--- a/scss/custom-bootstrap.scss
+++ b/scss/custom-bootstrap.scss
@@ -46,6 +46,7 @@ $new-theme-colors: (
   "danger":     #ff0077,
   "light":       #f3eeff,
   "dark":       $dark,
+  //aggiunti dopo
   'epicode-1': #5726c3,
   'epicode-2': #8625a5,
    'epicode-3': #cb2376
@@ -56,7 +57,7 @@ $theme-colors:map-merge($map1:$theme-colors , $map2:$new-theme-colors );
 
 $badge-border-radius:50rem;
 $btn-border-radius:50rem;
-$input-border-radius:50rem;
+$input-border-radius:50rem;  //è la misura dello stile pillola
 
 
 $new-grid-breakpoints:(
